# aitrader

./: .gitignore  BRIEF.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  handoff-2026-06-23.md  install.sh  pyproject.toml  settings.toml.example  state.md  uninstall.sh
.ccinsight/: .gitignore  INSIGHT.md  integration.json  observations.jsonl
.ccmemory/: .migrated-from  MEMORY.md  agent-must-be-guided-not-unguided.md  agent-state-stores-and-clean-relaunch.md  aitrader-deployment-topology.md  aitrader-ibkr-extra-ib-async.md  aitrader-product-packaging-1.0.md  aitrader-ui-build-deploy.md  alpaca-crypto-no-stop-market.md  alpaca-data-feed-iex-default.md  alpaca-paper-fills-gradual-iex.md  alpaca-sector-via-yahoo-search.md  alpaca-tif-case-insensitive.md  alpaca-vs-ibkr-bars-start.md  api-multibroker-and-version-drift.md  api-service-deploy-path.md  api-status-resilience-alpaca-http.md  benchmark-broker-independent-yahoo.md  broker-clientid-lease.md  card-shorting-added.md  ccinsight-integration.md  ccloop-wedges-on-nonwall-api-error.md  ccprospect-integration.md  claude-code-2.1.212-mcp-auto-background-breaks-sleep.md  constitution-edit-protocol.md  constitution-enforce-via-step-not-column.md  constitution-exit-two-sided-thesis.md  constitution-minimal-experiment.md  constitution-no-malformed-tool-examples.md  constitution-paper-agnostic-open-ended-mandate.md  constitution-persona-reverted.md  constitution-steps-not-prose.md  constitution-stops-and-tool-mechanics.md  constitution-stripped-to-mechanics.md  constitution-ten-step-cycle.md  constitution-thesis-inheritance-loop-break.md  constitution-trail-forced-table-9e.md  crypto-hard-lessons-provenance.md  crypto-volume-venue-only.md  dashboard-default-ports-2499-2500.md  (+59 more)
.ccprospect/: .gitignore  PROSPECT.md  integration.json
aitrader/: __init__.py  api.py  asset_types.py  broker.py  config.py  credentials.py  fuses.py  futures.py  journal_db.py  launch.py  market_calendar.py  paths.py  portd.py  timeutil.py
docs/: api.md  broker-data-feed.md  (+10 more)
(+96 files in other folders)
